@@ -1,3 +1,8 @@
+2006-07-20  Steve Fink <sphink@gmail.com>
+
+	* testsuite/lib/ltrace.exp: better quoting and error detection for
+	ltrace_verify_output's call to grep
+
 2006-08-07  Steve Fink  <sphink@gmail.com>
 
 	* ltrace.1: update bug email addr
